@startuml Database Entity Relationship Diagram
!theme plain
title RailNet Backend - Entity Relationship Diagram (ERD)

' Hide methods and show only attributes
hide methods
hide stereotypes

entity "User" as user {
  * id : INT <<PK>>
  --
  * email : VARCHAR <<unique>>
  * password : VARCHAR
  firstName : VARCHAR
  lastName : VARCHAR
  phone : VARCHAR
  address : VARCHAR
  * role : VARCHAR
  * createdAt : TIMESTAMP
  * updatedAt : TIMESTAMP
}

entity "Station" as station {
  * id : INT <<PK>>
  --
  * name : VARCHAR <<unique>>
  * city : VARCHAR
  * latitude : FLOAT
  * longitude : FLOAT
  * createdAt : TIMESTAMP
  * updatedAt : TIMESTAMP
}

entity "TrainRoute" as trainRoute {
  * id : INT <<PK>>
  --
  * name : VARCHAR <<unique>>
  * startStationId : INT <<FK>>
  * endStationId : INT <<FK>>
  * createdAt : TIMESTAMP
  * updatedAt : TIMESTAMP
}

entity "RouteStation" as routeStation {
  * id : INT <<PK>>
  --
  * trainRouteId : INT <<FK>>
  previousStationId : INT <<FK>>
  * currentStationId : INT <<FK>>
  nextStationId : INT <<FK>>
  distance : FLOAT
  * distanceFromStart : FLOAT
  * createdAt : TIMESTAMP
  * updatedAt : TIMESTAMP
}

entity "Compartment" as compartment {
  * id : INT <<PK>>
  --
  * name : VARCHAR
  * class : VARCHAR
  * type : VARCHAR
  * price : FLOAT
  * totalSeats : INT
  * createdAt : TIMESTAMP
  * updatedAt : TIMESTAMP
}

entity "Train" as train {
  * id : INT <<PK>>
  --
  * name : VARCHAR
  * number : VARCHAR <<unique>>
  * trainRouteId : INT <<FK>>
  * createdAt : TIMESTAMP
  * updatedAt : TIMESTAMP
}

entity "TrainCompartment" as trainCompartment {
  * id : INT <<PK>>
  --
  * trainId : INT <<FK>>
  * compartmentId : INT <<FK>>
  * quantity : INT
  * createdAt : TIMESTAMP
  * updatedAt : TIMESTAMP
}

entity "Seat" as seat {
  * id : INT <<PK>>
  --
  * trainCompartmentId : INT <<FK>>
  * seatNumber : VARCHAR
  * isAvailable : BOOLEAN
  * createdAt : TIMESTAMP
  * updatedAt : TIMESTAMP
  ..
  UNIQUE(trainCompartmentId, seatNumber)
}

entity "TrainSchedule" as trainSchedule {
  * id : INT <<PK>>
  --
  * trainId : INT <<FK>>
  * trainRouteId : INT <<FK>>
  * date : DATE
  * time : VARCHAR
  * createdAt : TIMESTAMP
  * updatedAt : TIMESTAMP
  ..
  UNIQUE(trainId, date)
}

entity "ScheduleStation" as scheduleStation {
  * id : INT <<PK>>
  --
  * trainScheduleId : INT <<FK>>
  * stationId : INT <<FK>>
  arrivalTime : VARCHAR
  departureTime : VARCHAR
  * sequence : INT
  * createdAt : TIMESTAMP
  * updatedAt : TIMESTAMP
}

entity "Ticket" as ticket {
  * id : INT <<PK>>
  --
  * ticketId : VARCHAR <<unique>>
  * userId : INT <<FK>>
  * trainScheduleId : INT <<FK>>
  * fromStationId : INT <<FK>>
  * toStationId : INT <<FK>>
  * seatId : INT <<FK>> <<unique>>
  * trainCompartmentId : INT <<FK>>
  * seatNumber : VARCHAR
  * passengerName : VARCHAR
  * passengerAge : INT
  * passengerGender : VARCHAR
  * price : FLOAT
  * status : VARCHAR
  * paymentStatus : VARCHAR
  expiresAt : TIMESTAMP
  confirmedAt : TIMESTAMP
  * createdAt : TIMESTAMP
  * updatedAt : TIMESTAMP
}

entity "PaymentTransaction" as payment {
  * id : VARCHAR <<PK>>
  --
  * ticketId : INT <<FK>> <<unique>>
  * transactionId : VARCHAR <<unique>>
  sessionKey : VARCHAR
  * amount : FLOAT
  * currency : VARCHAR
  * status : VARCHAR
  paymentMethod : VARCHAR
  bankTransactionId : VARCHAR
  valId : VARCHAR
  cardType : VARCHAR
  completedAt : TIMESTAMP
  gatewayUrl : VARCHAR
  errorMessage : VARCHAR
  metadata : JSON
  sslcommerzData : JSON
  * createdAt : TIMESTAMP
  * updatedAt : TIMESTAMP
}

entity "PaymentLog" as paymentLog {
  * id : VARCHAR <<PK>>
  --
  * transactionId : VARCHAR
  * action : VARCHAR
  * details : JSON
  * createdAt : TIMESTAMP
}

entity "CompartmentBooking" as compartmentBooking {
  * id : INT <<PK>>
  --
  * trainScheduleId : INT <<FK>>
  * trainCompartmentId : INT <<FK>>
  * bookedSeats : INT
  * totalSeats : INT
  * createdAt : TIMESTAMP
  * updatedAt : TIMESTAMP
  ..
  UNIQUE(trainScheduleId, trainCompartmentId)
}

' Relationships
user ||--o{ ticket : "books"
station ||--o{ trainRoute : "start/end"
station ||--o{ routeStation : "previous"
station ||--o{ routeStation : "current"
station ||--o{ routeStation : "next"
station ||--o{ scheduleStation : "stop at"
station ||--o{ ticket : "from"
station ||--o{ ticket : "to"

trainRoute ||--o{ routeStation : "contains"
trainRoute ||--o{ train : "defines"
trainRoute ||--o{ trainSchedule : "schedules"

train ||--o{ trainCompartment : "has"
train ||--o{ trainSchedule : "runs on"

compartment ||--o{ trainCompartment : "defines type"

trainCompartment ||--o{ seat : "contains"
trainCompartment ||--o{ ticket : "books in"
trainCompartment ||--o{ compartmentBooking : "tracks"

trainSchedule ||--o{ scheduleStation : "stops at"
trainSchedule ||--o{ ticket : "booked for"
trainSchedule ||--o{ compartmentBooking : "manages"

ticket ||--|| seat : "reserves"
ticket ||--|| payment : "pays for"

' Notes
note right of ticket
  **Status**: pending, confirmed, cancelled, expired
  **PaymentStatus**: pending, paid, failed, cancelled
  Expires 10 minutes after creation if unpaid
end note

note right of payment
  **Status**: INITIATED, COMPLETED, FAILED, CANCELLED, REFUNDED
  Integrates with SSLCommerz payment gateway
end note

note right of seat
  Created on-demand when booked
  Deleted when booking expires
  Unique per compartment and seat number
end note

note right of compartmentBooking
  Tracks aggregate seat availability
  Updated atomically during booking
  One record per schedule-compartment pair
end note

note right of routeStation
  Forms linked list of stations in route
  Stores distances for price calculation
  Supports complex multi-station routes
end note

note bottom of trainSchedule
  One schedule per train per date
  Prevents duplicate schedules
  Basis for all bookings and searches
end note

@enduml
